# rtimer

./: Cargo.toml  README.md  install.sh  rtimer-kde.desktop  uninstall.sh  update.sh
src/: main.rs
